Rename OpenDIF references to OpenNDX (#469)
